[package]
name = "rust_backend_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = {version = "1.0.226" ,features = ["derive"]}
serde_json= "1.0.145"
tokio = {version = "1.47.1" ,features = ["macros",]}
env_logger = {version = "0.11.8"}
ethers = "2.0"
secp256k1 = "0.28"
hex = "0.4"
anyhow = "1.0"
rand = "0.8"
actix-files = "0.6"